--- a/css/guess.css
+++ b/css/guess.css
@@ -4,6 +4,9 @@ body{
     font-family: sans-serif;
     text-align: center;
 }
+hr{
+    border: 2px solid #333;
+}
 input{
     background: #000;
     color: #aaa;
